--- a/gracias_termotanques.html
+++ b/gracias_termotanques.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gracias por tu consulta</title>
 
-  <!-- Acá insertás tu código de Google Tag Manager -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T7PSH3BL');</script>
+<!-- End Google Tag Manager -->
 
   <style>
     body {
@@ -45,6 +51,10 @@
   </style>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7PSH3BL"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="container">
     <h1>¡Gracias por tu consulta!</h1>
     <p>Tu mensaje fue enviado correctamente. Un asesor se contactará con vos a la brevedad.</p>
